dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-api-service
spec:
  selector:
    app: config-api-server
  ports:
    - name: http-api
      protocol: TCP
      port: 31509
      targetPort: 8080
      nodePort: 31509
    - name: grpc-manager-port
      protocol: TCP
      port: 30019
      targetPort: 30019
      nodePort: 30019       
  type: NodePort
